<?xml version="1.0" encoding="utf-8"?>
<resources>

    <style name="DialogStyle" parent="@android:style/Theme.Material.Dialog.Alert">
        <item name="android:windowIsTranslucent">true</item>
        <item name="android:windowBackground">@android:color/transparent</item>
        <item name="android:colorAccent">#009688</item>
    </style>
    <string name="previews_text">Previews!</string>
    <string name="launch_dialog_title" translatable="false">Heya!</string>
    <string name="launch_dialog_content">This is Extras for AA, a theme to change Android Auto Look
        \n\nIf you want to thank me for the development and the effort, you could make a donation with the button down below.
        \nEven a small amount would be much appreciated 😊</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="proceed">Continue</string>
    <string name="donate">Donate</string>
    <string name="creditstring">Many thanks for the wallpapers go to: %1$s</string>
    <string name="helpButton">Help</string>
    <string name="helpme">To install:\n
    1. Tick Android Auto\n
        2. See attention mark near "Android Auto" to avoid errors\n
        3. Hit the bottom button and select Build &amp; Install\n
    4. Repeat step 1 as many times as you want\n
    5. Reboot, go to manager tab, selet the built overlay(s) and enable them</string>
    <string name="helpme_lite">To install:\n
        1. Tick Android Auto\n
        2. See attention mark near "Android Auto" to avoid errors\n
        3. Hit the bottom button and select Build &amp; Install\n
        4. Repeat steps 3 and 4 as many times as you want\n
        5. Reboot, go to manager tab, select the built overlay(s) and enable\n</string>
    <string name="takemetoxdathreadstring">I\'d like to contact you</string>
    <string name="gotoxdathread">Go to XDA Thread</string>
    <string name="mailme">Mail me</string>
    <string name="contact_me_on_telegram">Join Telegram Channel</string>
    <string name="hi_iew">Heya!  If you are here, that\'s because you don\'t have Substratum Installed.  Extras for AA is a theme and needs Substratum to work, it\'s not a stand-alone app.  Please install Substratum and try again.</string>
    <string name="rating_message">Hey, would you take a moment to rate this theme on XDA Labs?</string>
    <string name="gotorating">Take me there!</string>
    <string name="nevershowagain">Leave me alone!</string>
    <string name="reconsider">Maybe Later</string>
    <string name="donation_message">You seem to really enjoy Extras for AA, would you like to show appreciation with a donation?</string>
    <string name="copied_bitcoin">BTC Address copied to clipboard</string>
    <string name="helpinstalling">I need help installing</string>
    <string name="faqstring" translatable="false">FAQ</string>
    <string name="credit">Credits</string>
    <string name="creditors" translatable="false">Special thanks to:\n\n
    Iconic Icons for the wonderful work of Status Bar Icons. Check out Iconic Icons theme and download it to have matching Status Bar Icons with your device.\n
    It\'s free and it\'s a very good Substratum theme to tweak the look of Android System</string>
</resources>