<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    android:id="@+id/finestra_crediti"
    xmlns:app="http://schemas.android.com/apk/lib/aawallpapers.rizzo.gabriele"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:background="@drawable/dialog_bg"
    android:orientation="horizontal">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/primaicona"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:gravity="start">

        <TextView
            android:id="@+id/telegram_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_me_on_telegram"
            android:textAlignment="center"
            android:textSize="13sp"
            app2:layout_constraintBottom_toBottomOf="parent"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/telegram_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/telegram_textview"
            android:layout_alignEnd="@id/telegram_textview"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:src="@drawable/ic_icons8_telegramma_app"
            android:tint="@android:color/white"
            app2:layout_constraintTop_toTopOf="parent"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent"/>



    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/secondaicona"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:paddingStart="30dp"
        android:paddingEnd="0dp">

        <ImageView
            android:id="@+id/mail_icon"
            android:layout_width="100dp"
            android:layout_height="98dp"
            android:scaleX="0.54"
            android:scaleY="0.54"
            android:gravity="center"
            android:src="@drawable/ic_envelope"
            android:tint="@android:color/white"
            android:padding="10dp"
            app2:layout_constraintTop_toTopOf="parent"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/mail_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/mailme"
            app2:layout_constraintBottom_toBottomOf="parent"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/terzaicona"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="0dp">

        <ImageView
            android:id="@+id/xda_icon"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:scaleX="0.55"
            android:scaleY="0.55"
            android:src="@drawable/ic_xda"
            app2:layout_constraintTop_toTopOf="parent"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/xda_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            android:textSize="12sp"
            android:text="@string/gotoxdathread"
            android:gravity="center"
            app2:layout_constraintBottom_toBottomOf="parent"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>
